<resources>
    <string name="app_name">About Cunda</string>
    <string name="name">Cunda</string>
    <string name="star_image">Star image</string>
    <string name="cunda_image">Cunda</string>
    <string name="dune_button">Done</string>
    <string name="fav_face_hint">What is your favorite Cunda face?</string>
    <string name="Cunda_bio">"I am Cunda, you may or may not know this about me but I really like to eat fish.\n
Also I am the best dog in the world. I care about my family and just can\'t stand when my siblings fight, or when they\'re sad.\n
And just so you\'ll know mom you\'re my favorite, and I know you love me even though you don\'t let me in bed with you."
    </string>
    <string name="description_zoom_touch_close">description_zoom_touch_close</string>
</resources>