<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/name"
            style="@style/NameStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textAlignment="center"
            android:textSize="@dimen/text_size" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/fav_face_edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/small_margin"
                android:layout_marginTop="@dimen/layout_margin"
                android:layout_marginRight="@dimen/small_margin"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/fav_face_hint"
                android:inputType="textPersonName" />

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/small_margin"
                android:layout_marginTop="@dimen/layout_margin"
                android:layout_marginRight="@dimen/small_margin"
                android:background="@color/color1"
                android:onClick="favFace"
                android:text="@string/dune_button"
                android:textAlignment="center" />
        </LinearLayout>


        <TextView
            android:id="@+id/fav_face"
            style="@style/NameStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_margin"
            android:textAlignment="center"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/cunda_image"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/layout_margin"
            android:layout_weight="1"
            android:contentDescription="@string/cunda_image"
            app:srcCompat="@drawable/cunda1" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    style="@style/NameStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/small_margin"
                    android:padding="@dimen/small_padding"
                    android:text="@string/Cunda_bio"
                    android:textSize="@dimen/text_size" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="300dp"
                        android:layout_margin="@dimen/small_margin"
                        android:layout_weight="1"
                        android:scaleType="centerCrop"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/cunda_image"
                        app:srcCompat="@drawable/cunda2" />

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="300dp"
                        android:layout_margin="@dimen/small_margin"
                        android:layout_weight="1"
                        android:scaleType="centerCrop"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/cunda_image"
                        app:srcCompat="@drawable/cunda3" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="300dp"
                        android:layout_margin="@dimen/small_margin"
                        android:layout_weight="1"
                        android:scaleType="centerCrop"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/cunda_image"
                        app:srcCompat="@drawable/liadandcunda" />

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="300dp"
                        android:layout_margin="@dimen/small_margin"
                        android:layout_weight="1"
                        android:scaleType="centerCrop"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/cunda_image"
                        app:srcCompat="@drawable/kamiandcunda" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>

    </LinearLayout>
</layout>